objects/PRX_BCI_Default_Values__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to store the BCI Default values</description>
    <fields>
        <fullName>PROD_CATEGORY__c</fullName>
        <label>PROD_CATEGORY</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROD_CONFIDENCE_PCT__c</fullName>
        <label>PROD_CONFIDENCE_PCT</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PROD_PRICE__c</fullName>
        <label>PROD_PRICE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PROD_QUANTITY__c</fullName>
        <label>PROD_QUANTITY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PROD_REGIME__c</fullName>
        <label>PROD_REGIME</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROD_SETID__c</fullName>
        <label>PROD_SETID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRX_BCI_Opportunity_Type__c</fullName>
        <label>PRX BCI Opportunity Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRX_BCI_ProductID__c</fullName>
        <label>PRX BCI ProductID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRX_Business_Unit__c</fullName>
        <label>PRX Business Unit</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRX_Opp_Specification_Type__c</fullName>
        <label>PRX Opp Specification Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>PRX BCI Default Values</label>
</CustomObject>